--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,5 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
     <style name="Theme.Tex" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blueWhale</item>
@@ -9,7 +10,7 @@
         <item name="colorOnSecondary">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/gray</item>
+        <item name="android:statusBarColor">@color/gray</item>
         <item name="fontFamily">@font/vazirregular</item>
         <!-- Customize your theme here. -->
         <!--Material type attributes-->
