--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -6,5 +6,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Main Fragment"/>
+        android:text="Favorite Fragment"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
