--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,29 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <FrameLayout
-        android:layout_marginTop="18dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical">
+       <FrameLayout
+           android:layout_marginTop="18dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/background_et_search"
-            android:hint="جستجو"
-            android:paddingStart="54dp"
-            android:paddingEnd="16dp"
-            android:textColor="?colorOnSurface"
-            android:textColorHint="?android:textColorSecondary"
-            android:textSize="15sp" />
+           <EditText
+               android:layout_width="match_parent"
+               android:layout_height="46dp"
+               android:layout_marginStart="16dp"
+               android:layout_marginEnd="16dp"
+               android:background="@drawable/background_et_search"
+               android:hint="جستجو"
+               android:paddingStart="54dp"
+               android:paddingEnd="16dp"
+               android:textColor="?colorOnSurface"
+               android:textColorHint="?android:textColorSecondary"
+               android:textSize="15sp" />
 
-        <ImageView
+           <ImageView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="start|center_vertical"
+               android:layout_marginStart="38dp"
+               app:srcCompat="@drawable/ic_round_search_24" />
+       </FrameLayout>
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="38dp"
-            app:srcCompat="@drawable/ic_round_search_24" />
-    </FrameLayout>
+            android:layout_height="56dp">
+
+            <ImageView
+                android:id="@+id/star"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="23dp"
+                android:src="@drawable/star" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_toLeftOf="@+id/star"
+                android:textAppearance="@style/TextAppearance.MyTheme.Subtitle1"
+                android:text="لیست ورزش ها"
+                android:layout_marginRight="8dp"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/package_rec"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent" />
+
+   </LinearLayout>
+
+
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
