--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -70,6 +70,7 @@
 
     <style name="TextAppearance.MyTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <!--Your custom type style here-->
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TextAppearance.MyTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
