add : detailPackage added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="irisBlue">#0AB6CC</color>
     <color name="red">#FF4A4A</color>
-    <color name="gray">#E5E5E5</color>
+    <color name="gray">#D1D1D1</color>
     <color name="blueWhale">#223148</color>
     <color name="darkGray">#8C8C8C</color>
 </resources>
