--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -92,7 +92,7 @@
         app:layout_constraintTop_toTopOf="@+id/view4" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/move_rec"
         android:layout_width="0dp"
         android:layout_height="404dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
