--- a/app/src/main/res/layout/move_item.xml
+++ b/app/src/main/res/layout/move_item.xml
@@ -20,11 +20,11 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/imgMoveTv"
-        android:layout_width="77dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,6 +35,7 @@
         android:id="@+id/timeMoveTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:layout_marginStart="8dp"
         android:text="00:20"
         app:layout_constraintStart_toStartOf="@+id/moveTitle"
